--- a/README
+++ b/README
@@ -1,10 +1,20 @@
-DSpace version 5
-
-To build docker image execute this command in the root directory:
+# DSpace version 5
 
 ```
-docker build -t dspace -f Dockerfile.jdk8 .
+docker-compose up --build
 ```
 
-This will download all base images and dependencies so it will take some time to complete...
+This will download all base images and dependencies then the source files will be build, so it will take some time to complete...
 
+After previous command finishes, Dspace should be accessible via this url:
+```
+http://localhost:8080/jspui/
+```
+
+To exit containers use Ctrl+c in terminal where docker compose command was used
+
+Then to delete columes and networks of the container use:
+
+```
+docker-compose down
+```
